--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 				<section data-markdown="slides/about-me.md"></section>
 				<section data-markdown="slides/structure.md"></section>
 				<section data-markdown="slides/background.md"></section>
+				<section data-markdown="slides/stokes-drift-glad.md"></section>
 				<section data-markdown="slides/current.md"></section>
 			</div>
 		</div>
