--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 				<section data-markdown="slides/title.md"></section>
 				<section data-markdown="slides/about-me.md"></section>
 				<section data-markdown="slides/structure.md"></section>
-				<section data-markdown="slides/background.md"></section>
+				<section data-markdown="slides/momentum.md"></section>
 				<section data-markdown="slides/stokes-drift-glad.md"></section>
-				<section data-markdown="slides/current.md"></section>
+				<section data-markdown="slides/sustain.md"></section>
 			</div>
 		</div>
 
@@ -37,6 +37,8 @@
 			// - https://revealjs.com/config/
 			Reveal.initialize({
 				hash: true,
+
+				margin: 0.02,
 
 				// Learn about plugins: https://revealjs.com/plugins/
 				plugins: [
