--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 				<section data-markdown="slides/momentum.md"></section>
 				<section data-markdown="slides/stokes-drift-glad.md"></section>
 				<section data-markdown="slides/sustain.md"></section>
+				<section data-markdown="slides/clasi.md"></section>
 			</div>
 		</div>
 
@@ -39,6 +40,7 @@
 				hash: true,
 
 				margin: 0.02,
+				transition: "fade",
 
 				// Learn about plugins: https://revealjs.com/plugins/
 				plugins: [
