WIP open source

--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
 		<div class="reveal">
 			<div class="slides">
 				<section data-markdown="slides/title.md"></section>
-				<section data-markdown="slides/about-me.md"></section>
-				<section data-markdown="slides/structure.md"></section>
 				<section data-markdown="slides/momentum.md"></section>
 				<section data-markdown="slides/stokes-drift-glad.md"></section>
 				<section data-markdown="slides/sustain.md"></section>
 				<section data-markdown="slides/clasi.md"></section>
+				<section data-markdown="slides/open-source.md"></section>
 			</div>
 		</div>
 
