Almost done; fine-tuning now

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 				<section data-markdown="slides/stokes-drift-glad.md"></section>
 				<section data-markdown="slides/sustain.md"></section>
 				<section data-markdown="slides/clasi.md"></section>
+				<section data-markdown="slides/machine-learning.md"></section>
 				<section data-markdown="slides/open-source.md"></section>
+				<section data-markdown="slides/wrapup.md"></section>
 			</div>
 		</div>
 
@@ -40,6 +42,7 @@
 
 				margin: 0.02,
 				transition: "fade",
+				slideNumber: true,
 
 				// Learn about plugins: https://revealjs.com/plugins/
 				plugins: [
